--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav class="nav">
+            <div class="nav-images">
+                <img class="nav-icon" src="./images/nav-icon.png" alt="">
+                <img class="nav-icon-1" src="./images/nav-jeans-pant.png" alt="">
+            </div>
+            <div>
+                <img class="nav-group-icon" src="./images/nav-group-icon.png" alt="">
+            </div>
+        </nav>
+        <!-- banner -->
+        <div class="banner">
 
+        </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
