banner almost done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denim Store</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="nav">
@@ -19,7 +21,26 @@
         </nav>
         <!-- banner -->
         <div class="banner">
-
+            <div>
+                <div class="banner-subtitle">
+                    <p>পুরুষ এবং মহিলাদের জন্য ডেনিম জিন্স</p>
+                </div>
+                <div class="banner-title">
+                    <p>স্টাইলিশ ন্যারো ফিটিং সেমি স্টিচড ডেনিম জিন্স প্যান্ট.</p>
+                </div>
+                <div class="banner-price">
+                    <p class="total-price-text">সর্বমোট মূল্য:</p>
+                    <div class="banner-price-text">
+                        <p class="middle-mark">৳ 750.00</p>
+                        <p class="price-text">৳ 550.00</p>
+                    </div>
+                    <button class="btn-primary">
+                        <p>অর্ডার করুন</p>
+                        <img src="./images/right-arrow.png" alt="">
+                    </button>
+                    <p class="banner-price-description">ঢাকার বাহিরে থেকে অর্ডার করতে চাইলে ১৫০ টাকা অগ্রিম ডেলিভারি পরিশোধ করুন</p>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -29,4 +50,5 @@
 
     </footer>
 </body>
+
 </html>
