product details section done

--- a/index.html
+++ b/index.html
@@ -34,17 +34,101 @@
                         <p class="middle-mark">৳ 750.00</p>
                         <p class="price-text">৳ 550.00</p>
                     </div>
-                    <button class="btn-primary">
+                    <button class="btn-primary banner-btn">
                         <p>অর্ডার করুন</p>
                         <img src="./images/right-arrow.png" alt="">
                     </button>
-                    <p class="banner-price-description">ঢাকার বাহিরে থেকে অর্ডার করতে চাইলে ১৫০ টাকা অগ্রিম ডেলিভারি পরিশোধ করুন</p>
+                    <p class="banner-price-description">ঢাকার বাহিরে থেকে অর্ডার করতে চাইলে ১৫০ টাকা অগ্রিম ডেলিভারি
+                        পরিশোধ করুন</p>
                 </div>
+            </div>
+            <div>
+                <img class="blue-jeans-banner-img" src="./images/blue-jeans-banner-img.png" alt="">
             </div>
         </div>
     </header>
     <main>
-
+        <!-- product details -->
+        <section class="product-details">
+            <p class="product-description">আমাদের এই ডেনিম ফেব্রিক ১০০% কটন টুইল বা স্টেচ টুইল দিয়ে তৈরি হয়।
+                এই ফেব্রিক দিয়ে তৈরি হয় শার্ট, জিন্স, ব্যাগ, জ্যাকেটসহ আরও অনেক কিছু। নিয়মিত ব্যবহারের জন্য জিন্স
+                প্যান্টের কোনো তুলনা হয় না। জিন্স তৈরিতে ব্যবহার করা হয় ডেনিম কটন যা সম্পূর্ণ সুতি। ছেলেদের জিন্স
+                প্যান্টের দাম ও ডিজাইন দেখে কিনুন বাংলাদেশের অন্যতম সেরা অনলাইন শপ অফুরন্ত থেকে।</p>
+            <div class="product-description-point">
+                <h2 class="description-title">আমাদের ডেনিম জিন্স প্যান্ট প্রোডাক্টের বিবরণ</h2>
+                <div class="description-point-columns">
+                    <div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Men's Denim Pant.</p>
+                        </div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Size- 30/32/34/36</p>
+                        </div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Spandax- 2%</p>
+                        </div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Fabrics- Denim</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Style- Narrow Slim Fit</p>
+                        </div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Very Comfortable to Wear.</p>
+                        </div>
+                        <div class="description-point">
+                            <img src="./images/checked.png" alt="">
+                            <p>Nice Stylish Narrow Slim Fit.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="denim-img">
+                <div class="denim-img-text">
+                    <div class="jeans-pile-img">
+                        <img src="./images/blue-jeans-pants-clothes-pile.png" alt="">
+                    </div>
+                    <div class="jeans-size">
+                        <h2>ডেনিম ফেব্রিক জিন্স সাইজ</h2>
+                        <div class="frame-images">
+                            <div class="frame-img">
+                                <img src="./images/Frame.png" alt="">
+                                <p class="waist-size">৩০</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./images/Frame.png" alt="">
+                                <p class="waist-size">৩২</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./images/Frame.png" alt="">
+                                <p class="waist-size">৩৪</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./images/Frame.png" alt="">
+                                <p class="waist-size">৩৬</p>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>সবচেয়ে চেয়ে কম দামে আমাদের
+                        থেকে কিনুন।</h3>
+                    <button class="btn-primary denim-img-btn">
+                        <p>অর্ডার করুন</p>
+                        <img src="./images/right-arrow.png" alt="">
+                    </button>
+                </div>
+                <img src="./images/denim_text_effect.png" alt="">
+            </div>
+        </section>
+        <!-- jeans features -->
+        
     </main>
     <footer>
 
