jeans features section done

--- a/index.html
+++ b/index.html
@@ -128,7 +128,130 @@
             </div>
         </section>
         <!-- jeans features -->
-        
+        <section>
+            <div class="jeans-features">
+                <div class="jeans-cards">
+                    <div class="jeans-card">
+                        <img src="./images/stack-jeans-1.png" alt="">
+                        <p class="jeans-card-title">মেনস ডেনিম জিন্স প্যান্ট</p>
+                    </div>
+                    <div class="jeans-card">
+                        <img src="./images/stack-jeans-2.png" alt="">
+                        <p class="jeans-card-title">স্লিম ফিট স্ট্রেচেবল ডেনিম জিন্স ফর মেন</p>
+                    </div>
+                    <div class="jeans-card">
+                        <img src="./images/stack-jeans-3.png" alt="">
+                        <p class="jeans-card-title">সেমি ন্যারো ক্লাসিক ফিট বেসিক ডেনিম জিন্স...</p>
+                    </div>
+                    <div class="jeans-card">
+                        <img src="./images/stack-jeans-4.png" alt="">
+                        <p class="jeans-card-title">সেমি ন্যারো ক্লাসিক ফিট বেসিক ডেনিম জিন্স...</p>
+                    </div>
+                </div>
+                <p class="dotted-line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+                    - - - - -</p>
+                <div class="">
+                    <h2 class="jeans-features-title">আমাদের ডেনিম ও জিন্সের কিছু বৈশিষ্ট্য</h2>
+                    <div class="jeans-features-columns">
+                        <div>
+                            <div class="features-point">
+                                <img src="./images/checked.png" alt="">
+                                <p> ডেনিম ফেব্রিক ১০০% কটন টুইল বা স্টেচ টুইল দিয়ে তৈরি হয়। </p>
+                            </div>
+                            <div class="features-point">
+                                <img src="./images/checked.png" alt="">
+                                <p>ডেনিম ফেব্রিক দিয়ে তৈরি পোশাক অনেকদিন ব্যবহার করা যায়।</p>
+                            </div>
+                            <div class="features-point">
+                                <img src="./images/checked.png" alt="">
+                                <p>দীর্ঘদিন ব্যবহার করা যায়।</p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="features-point">
+                                <img src="./images/checked.png" alt="">
+                                <p>সহজে ভাঁজ পড়ে না। ফলে আয়রনের ঝামেলা ছাড়াই পরা যায়।</p>
+                            </div>
+                            <div class="features-point">
+                                <img src="./images/checked.png" alt="">
+                                <p>জিন্স বারবার ধোয়ার প্রয়োজন হয় না।</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <div class="bunch-jeans-img">
+                        <img class="bunch-jeans" src="./images/bunch-twisted-jeans.png" alt="">
+                    </div>
+                    <div class="btns-on-jeans-img">
+                        <img class="ellipse" src="./images/Ellipse.png" alt="">
+                        <img class="play-btn" src="./images/play-button.png" alt="">
+                    </div>
+                    <div class="some-instructions">
+                        <h2>লেনদেনকালে কিভাবে নিরাপদ থাকবেন তার কিছু নির্দেশনাবলী</h2>
+                        <div class="instructions-points">
+                            <p>প্রোডাক্টটি ভালোভাবে যাচাই করে নিন এবং পুরোপুরি সন্তুষ্ট হলে তারপর দাম পরিশোধ করুন।</p>
+                            <p>প্রোডাক্ট ও অর্থ দুটোই একই সময় লেনদেন করুন</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="jeans-peice">
+                    <img class="jeans-peice-img" src="./images/jeans-peice.png" alt="">
+                    <h2>মুল্য-550.00 টাকা</h2>
+                    <h4>সারা দেশে ফ্রি হোম ডেলিভারি</h4>
+                    <div class="btn-secondary-div">
+                        <button class="btn-secondary">
+                            <p>অর্ডার করুন</p>
+                            <img src="./images/right-arrow.png" alt="">
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="owner-section">
+                <div class="owner-cards">
+                    <div class="owner-card">
+                        <img class="owner-img" src="./images/Image.png" alt="">
+                        <div class="owner-details">
+                            <h4 class="owner-name">Jacob Jones</h4>
+                            <p>Buffalo, NJ</p>
+                            <p>- - - - - - - - - - - - - -</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                        </div>
+                    </div>
+                    <div class="owner-card2">
+                        <img class="owner-img" src="./images/Image (1).png" alt="">
+                        <div class="owner-details2">
+                            <h4 class="owner-name">Jacob Jones</h4>
+                            <p>Buffalo, NJ</p>
+                            <p>- - - - - - - - - - - - - -</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                        </div>
+                    </div>
+                    <div class="owner-card">
+                        <img class="owner-img" src="./images/Image (2).png" alt="">
+                        <div class="owner-details">
+                            <h4 class="owner-name">Devon Lane</h4>
+                            <p>Buffalo, NJ</p>
+                            <p>- - - - - - - - - - - - - -</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="arrows">
+                    <div>
+                        <img class="arrow-left" src="./images/arrow-left.png" alt="">
+                    </div>
+                    <div>
+                        <img class="arrow-right" src="./images/arrow-right.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
