--- a/index.html
+++ b/index.html
@@ -10,45 +10,48 @@
 
 <body>
     <header class="header">
-        <nav class="nav">
-            <div class="nav-images">
-                <img class="nav-icon" src="./images/nav-icon.png" alt="">
-                <img class="nav-icon-1" src="./images/nav-jeans-pant.png" alt="">
-            </div>
-            <div>
-                <img class="nav-group-icon" src="./images/nav-group-icon.png" alt="">
-            </div>
-        </nav>
-        <!-- banner -->
-        <div class="banner">
-            <div>
-                <div class="banner-subtitle">
-                    <p>পুরুষ এবং মহিলাদের জন্য ডেনিম জিন্স</p>
+        <div class="nav-banner">
+            <nav class="nav">
+                <div class="nav-images">
+                    <img class="nav-icon" src="./images/nav-icon.png" alt="">
+                    <img class="nav-icon-1" src="./images/nav-jeans-pant.png" alt="">
                 </div>
-                <div class="banner-title">
-                    <p>স্টাইলিশ ন্যারো ফিটিং সেমি স্টিচড ডেনিম জিন্স প্যান্ট.</p>
+                <div>
+                    <img class="nav-group-icon" src="./images/nav-group-icon.png" alt="">
                 </div>
-                <div class="banner-price">
-                    <p class="total-price-text">সর্বমোট মূল্য:</p>
-                    <div class="banner-price-text">
-                        <p class="middle-mark">৳ 750.00</p>
-                        <p class="price-text">৳ 550.00</p>
+            </nav>
+
+            <div class="banner">
+                <div>
+                    <div class="banner-subtitle">
+                        <p>পুরুষ এবং মহিলাদের জন্য ডেনিম জিন্স</p>
                     </div>
-                    <button class="btn-primary banner-btn">
-                        <p>অর্ডার করুন</p>
-                        <img src="./images/right-arrow.png" alt="">
-                    </button>
-                    <p class="banner-price-description">ঢাকার বাহিরে থেকে অর্ডার করতে চাইলে ১৫০ টাকা অগ্রিম ডেলিভারি
-                        পরিশোধ করুন</p>
+                    <div class="banner-title">
+                        <p>স্টাইলিশ ন্যারো ফিটিং সেমি স্টিচড ডেনিম জিন্স প্যান্ট.</p>
+                    </div>
+                    <div class="banner-price">
+                        <p class="total-price-text">সর্বমোট মূল্য:</p>
+                        <div class="banner-price-text">
+                            <p class="middle-mark">৳ 750.00</p>
+                            <p class="price-text">৳ 550.00</p>
+                        </div>
+                        <button class="btn-primary banner-btn">
+                            <p>অর্ডার করুন</p>
+                            <img src="./images/right-arrow.png" alt="">
+                        </button>
+                        <p class="banner-price-description">ঢাকার বাহিরে থেকে অর্ডার করতে চাইলে ১৫০ টাকা অগ্রিম ডেলিভারি
+                            পরিশোধ করুন</p>
+                    </div>
                 </div>
-            </div>
-            <div>
-                <img class="blue-jeans-banner-img" src="./images/blue-jeans-banner-img.png" alt="">
+                <div>
+                    <img class="blue-jeans-banner-img" src="./images/blue-jeans-banner-img.png" alt="">
+                </div>
             </div>
         </div>
+        <img class="banner-bg-img" src="./images/banner-bg.png" alt="">
     </header>
-    <main>
-        <!-- product details -->
+    <main class="main">
+
         <section class="product-details">
             <p class="product-description">আমাদের এই ডেনিম ফেব্রিক ১০০% কটন টুইল বা স্টেচ টুইল দিয়ে তৈরি হয়।
                 এই ফেব্রিক দিয়ে তৈরি হয় শার্ট, জিন্স, ব্যাগ, জ্যাকেটসহ আরও অনেক কিছু। নিয়মিত ব্যবহারের জন্য জিন্স
@@ -127,8 +130,8 @@
                 <img src="./images/denim_text_effect.png" alt="">
             </div>
         </section>
-        <!-- jeans features -->
-        <section>
+
+        <section class="jeans-features-section">
             <div class="jeans-features">
                 <div class="jeans-cards">
                     <div class="jeans-card">
@@ -220,7 +223,8 @@
                             <h4 class="owner-name">Jacob Jones</h4>
                             <p>Buffalo, NJ</p>
                             <p>- - - - - - - - - - - - - -</p>
-                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling
+                                absolute and wandered.</p>
                         </div>
                     </div>
                     <div class="owner-card2">
@@ -229,7 +233,8 @@
                             <h4 class="owner-name">Jacob Jones</h4>
                             <p>Buffalo, NJ</p>
                             <p>- - - - - - - - - - - - - -</p>
-                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling
+                                absolute and wandered.</p>
                         </div>
                     </div>
                     <div class="owner-card">
@@ -238,7 +243,8 @@
                             <h4 class="owner-name">Devon Lane</h4>
                             <p>Buffalo, NJ</p>
                             <p>- - - - - - - - - - - - - -</p>
-                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling absolute and wandered.</p>
+                            <p>Sociable on as carriage my position weddings raillery consider. Peculiar trifling
+                                absolute and wandered.</p>
                         </div>
                     </div>
                 </div>
@@ -250,6 +256,63 @@
                         <img class="arrow-right" src="./images/arrow-right.png" alt="">
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="order-section">
+            <div class="order-headline">
+                <h2>অর্ডার করতে নিচের ফর্মটি পূরণ করে সাবমিট করুন !</h2>
+            </div>
+            <div class="billing-order-form">
+                <div class="billing-address">
+                    <p>Billing details</p>
+                    <p class="billing-name">আপনার নাম লিখুন *</p>
+                    <p class="billing-mobile">আপনার মোবাইল নাম্বার লিখুন *</p>
+                    <p class="address">আপনার সম্পূর্ণ ঠিকানা লিখুন *</p>
+                    <div class="payment-box">
+                        <div class="bg-white">
+                            <p>Paymet</p>
+                            <p>ক্যাশ অন ডেলিভারি</p>
+                        </div>
+                        <div class="bg-blue">
+                            <p>Pay with cash upon delivery.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="order">
+                    <!-- <p>Your order</p> -->
+                </div>
+            </div>
+            <div>
+                <img class="order-bg-img" src="./images/918 1.png" alt="">
+            </div>
+            <div>
+                <div class="footer-jeans-div">
+                    <img class="footer-jeans-img" src="./images/roll-blue-denim-jeans.png" alt="">
+                </div>
+            </div>
+            <div class="footer-details">
+                <div class="links">
+                    <h4>প্রয়োজনীয় লিংক</h4>
+                    <p>প্রাইভেসী পলিসি</p>
+                    <p>শর্তাবলী</p>
+                </div>
+                <div class="footer-icon">
+                    <img src="./images/Frame (1).png" alt="">
+                    <img src="./images/Jeans Pants.png" alt="">
+                </div>
+                <div>
+                    <p class="for-order">অর্ডার পেতে কল করুন এই নাম্বারে</p>
+                    <h2 class="phone-no">+8801799733234</h2>
+                </div>
+            </div>
+            <div class="social-icon">
+                <img src="./images/facebook (9) 1.png" alt="">
+                <img src="./images/instagram (7) 1.png" alt="">
+                <img src="./images/youtube (4) 1.png" alt="">
+            </div>
+            <div>
+                <p class="footer-text">System Development by  <span class="funnel">Funnel Liner</span></p>
             </div>
         </section>
     </main>
